force-app/main/default/objects/Transaction__c/fields/Account_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Account_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>