force-app/main/default/objects/Transaction__c/fields/Admin_id__c.field-meta.xml
<CustomField>
    <fullName>Admin_id__c</fullName>
    <label>Admin_id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>