force-app/main/default/objects/Transaction__c/fields/Avq_Total__c.field-meta.xml
<CustomField>
    <fullName>Avq_Total__c</fullName>
    <label>Avq Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>