force-app/main/default/objects/Transaction__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <label>Broker</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>