force-app/main/default/objects/Transaction__c/fields/CC_Mask__c.field-meta.xml
<CustomField>
    <fullName>CC_Mask__c</fullName>
    <label>CC Mask</label>
    <length>20</length>
    <type>Text</type>
</CustomField>