force-app/main/default/objects/Transaction__c/fields/Coupon_ID__c.field-meta.xml
<CustomField>
    <fullName>Coupon_ID__c</fullName>
    <label>Coupon ID</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>