force-app/main/default/objects/Transaction__c/fields/Gateway_Id__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Id__c</fullName>
    <label>Gateway_Id</label>
    <type>TextArea</type>
</CustomField>