force-app/main/default/objects/Transaction__c/fields/gateway_source__c.field-meta.xml
<CustomField>
    <fullName>gateway_source__c</fullName>
    <label>Gateway_Source</label>
    <type>TextArea</type>
</CustomField>