force-app/main/default/objects/Transaction__c/fields/IP__c.field-meta.xml
<CustomField>
    <fullName>IP__c</fullName>
    <label>IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>