force-app/main/default/objects/Transaction__c/fields/IsInserted__c.field-meta.xml
<CustomField>
    <fullName>IsInserted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInserted</label>
    <type>Checkbox</type>
</CustomField>