force-app/main/default/objects/Transaction__c/fields/Latin_Assist__c.field-meta.xml
<CustomField>
    <fullName>Latin_Assist__c</fullName>
    <label>Latin Assist</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>