force-app/main/default/objects/Transaction__c/fields/Option_Total__c.field-meta.xml
<CustomField>
    <fullName>Option_Total__c</fullName>
    <label>Option Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>