force-app/main/default/objects/Transaction__c/fields/policy_id__c.field-meta.xml
<CustomField>
    <fullName>policy_id__c</fullName>
    <label>Policy_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>