force-app/main/default/objects/Transaction__c/fields/Policy_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Policy_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Number</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>