force-app/main/default/objects/Transaction__c/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <formula>IF( CONTAINS(TEXT(Amount__c), &apos;-&apos;),Amount__c*0,Amount__c)</formula>
    <label>Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>