force-app/main/default/objects/Transaction__c/fields/Premium_Base__c.field-meta.xml
<CustomField>
    <fullName>Premium_Base__c</fullName>
    <label>Premium Base</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>