force-app/main/default/objects/Transaction__c/fields/Quote_c__c.field-meta.xml
<CustomField>
    <fullName>Quote_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote (c)</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>