force-app/main/default/objects/Transaction__c/fields/Tax_Iva__c.field-meta.xml
<CustomField>
    <fullName>Tax_Iva__c</fullName>
    <label>Tax Iva</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>