force-app/main/default/objects/Transaction__c/fields/Term_Days__c.field-meta.xml
<CustomField>
    <fullName>Term_Days__c</fullName>
    <label>Term Days</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>