force-app/main/default/objects/Transaction__c/fields/User_id__c.field-meta.xml
<CustomField>
    <fullName>User_id__c</fullName>
    <label>User_id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>